Project

General

Profile

Actions

Bug #17380

closed

ceph-helpers.sh fails in jenkins run

Added by Kefu Chai over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

at least test_repair fails

see https://jenkins.ceph.com/job/ceph-pull-requests/11829/consoleFull

the timestamp returned by get_last_scrub_stamp() is not updated after "ceph pg repair"

Actions #1

Updated by Kefu Chai over 7 years ago

  • Description updated (diff)
Actions #2

Updated by Kefu Chai over 7 years ago

  • Assignee set to Kefu Chai
Actions #3

Updated by Kefu Chai over 7 years ago

  • Status changed from 12 to Fix Under Review
Actions #4

Updated by Kefu Chai over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF