osd: should not look up an empty pg

this fixes the scrub timeouts we spotted in jenkins run and qa run.
it's a regression introduced by 94d866c

Fixes: http://tracker.ceph.com/issues/17380
Signed-off-by: Loic Dachary <loic@dachary.org>
Signed-off-by: Kefu Chai <kchai@redhat.com>